indicator-messages (12.10.6-0ubuntu1) UNRELEASED; urgency=low

  * debian/rules:
    - Use autogen.sh for dh_autoreconf.
  * debian/control:
    - Fix styling: add trailing commas at the end of lists. 
    - Update Vcs-Bzr, Vcs-Browser fields and add a notice for developers.
    - Add libgtest-dev to Build-Depends.

 -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Tue, 13 Nov 2012 13:37:56 -0500

indicator-messages (12.10.5-0ubuntu2) raring; urgency=low

  * Upload to raring

 -- Sebastien Bacher <seb128@ubuntu.com>  Wed, 07 Nov 2012 15:16:08 +0100

indicator-messages (12.10.5-0ubuntu1) quantal-proposed; urgency=low

  * New upstream release:
    - fix crash caused by GError not being cleared (lp #1064314)
    - fix crash when registering an app that was previously unregistered 
      (lp #1065169)
    - remove the icon if NULL is passed to source_set_icon (lp #1070421)

 -- Sebastien Bacher <seb128@ubuntu.com>  Wed, 24 Oct 2012 17:30:45 +0200

indicator-messages (12.10.4-0ubuntu1) quantal; urgency=low

  * New upstream release:
    - don't segfault if .desktop file is not installed (lp: #1058386)
    - Use fallback icon names (without status emblems).
      (lp: #1056595)

 -- Sebastien Bacher <seb128@ubuntu.com>  Tue, 02 Oct 2012 23:20:19 +0200

indicator-messages (12.10.2-0ubuntu1) quantal; urgency=low

  * New upstream release, includes apis to allow changing the label and
    the icon of sources and add documentation
  * debian/libmessaging-menu0.symbols:
    - new version update
  * debian/libmessaging-menu-dev.install:
    - install the documentation
  * debian/rules:
    - build the documentation
    - updated shlibs version
    - use --with gir so gir:Depends work as it should 
      (lp: #1044125)

 -- Sebastien Bacher <seb128@ubuntu.com>  Sat, 01 Sep 2012 12:36:35 +0200

indicator-messages (12.10.1-0ubuntu1) quantal-proposed; urgency=low

  * New upstream version
  * debian/control:
    - breaks on version of ported clients using libindicate