@@ -1,5 +1,7 @@
 #!/usr/bin/make -f
 
+export DPKG_GENSYMBOLS_CHECK_LEVEL=4
+
 %:
 	dh $@ --with autoreconf,translations,gir
 
@@ -8,10 +10,6 @@ override_dh_autoreconf:
 
 override_dh_auto_configure:
 	dh_auto_configure -- --libdir="\$${prefix}/lib" --libexecdir="\$${prefix}/lib/indicator-messages" --enable-gtk-doc
-
-override_dh_makeshlibs:
-	dh_makeshlibs -plibmessaging-menu0 -V'libmessaging-menu0 (>= 12.10.2)' -- -c4
-	dh_makeshlibs -Nlibmessaging-menu0
 
 override_dh_install:
 	find debian/tmp/usr/lib -name *.la -delete
